--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,19 +24,35 @@ body {
   margin: 1em 0;
 }
 
+.chart-group-1 {
+ grid-column: 1/13;
+ display: flex;
+ flex-flow: column;
+}
+
+.charts {
+  display: flex;
+}
+
+.charts > * {
+  flex: 0 0 50%;
+  height: 17em;
+}
+
 #us1-chart {
   grid-column: 1/7;
   grid-row: 2/6;
 }
 
 #us2-chart {
-  grid-column: 7/13;
-  grid-row: 2/6;
+  display: none;
+  /* grid-column: 7/13;
+  grid-row: 2/6; */
 }
 
-#line-chart {
-  grid-column: 1/13;
-  grid-row: 6/10;
+#line-chart-1 {
+  grid-column: 7/13;
+  grid-row: 2/6;
 }
 
 .axis {
