--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,14 +4,66 @@
   stroke-width: 2px;
 }*/
 
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   overflow: hidden;
-  background-color: #F1F3F3
+  background-color: #F1F3F3;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .container {
-  width:100vw;
+  width:90vw;
   height: 100vh;
+  margin: 0 auto;
   display: grid;
   overflow-x: hidden;
   grid-template-columns: repeat(12, 1fr);
@@ -20,8 +72,13 @@ body {
 }
 
 .header {
+  font-size: 2em;
   grid-column: 1/13;
   margin: 1em 0;
+}
+
+.chart-title {
+  margin-bottom: .5em;
 }
 
 .chart-group-1 {
@@ -129,11 +186,22 @@ body {
 
 .tooltip {
   background-color: #fff;
-  border: 1px #36454f solid;
-  border-radius: 1px;
+  padding: .8em .8em 0 .8em;
+  border-bottom: .5em #36454f solid;
+  border-radius: .3em;
 }
 
-.tooltip key {
+.tooltip-data {
+  margin-bottom: 1em;
+}
+
+.tooltip .key {
   text-transform: uppercase;
+  font-size: .7em;
+  margin-bottom: .3em;
   color: #36454f;
+}
+
+.tooltip p {
+  font-size: .85em;
 }
