--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,6 +152,7 @@ body {
 }
 
 .switch-field {
+	grid-column: 7/13;
   display: flex;
   margin-bottom: 0.5em;
 }
@@ -166,6 +167,8 @@ body {
 }
 
 .switch-field label {
+	display: flex;
+	align-items: center;
   background-color: #e4e4e4;
   color: rgba(0, 0, 0, 0.6);
   font-size: 14px;
@@ -184,7 +187,15 @@ body {
   background-color: #A5DC86;
 }
 
+.caption {
+	display: flex;
+	justify-content: center;
+	font-size: .8em;
+	margin-top: 1em;
+}
+
 .tooltip {
+	max-width: 18em;
   background-color: #fff;
   padding: .8em .8em 0 .8em;
   border-bottom: .5em #36454f solid;
@@ -216,4 +227,8 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.2);
   transition: all 0.1s ease-in-out;
 	visibility: hidden;
+}
+
+.select-field {
+	grid-column: 1/6;
 }
