First pass at Tooltip improvement, add new data set and cleaner functions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,6 +206,18 @@ body {
   margin-bottom: 1em;
 }
 
+.flex {
+	display: flex;
+}
+
+.sb {
+	justify-content:  space-between;
+}
+
+.half-em-margin {
+	margin-right: .5em;
+}
+
 .tooltip .key {
   text-transform: uppercase;
   font-size: .7em;
