--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,3 +244,16 @@ body {
 .select-field {
 	grid-column: 1/6;
 }
+
+#title-select {
+	background-color: transparent;
+	border-radius: 0;
+	border: none;
+	border-bottom: 2px solid #888;
+	padding: .4em 1em;
+	font-size: .8em;
+}
+
+#title-select:focus {
+	outline: none;
+}
