--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,7 +250,7 @@ body {
 	border-radius: 0;
 	border: none;
 	border-bottom: 2px solid #888;
-	padding: .4em 1em;
+	padding: 0em 1em 0.2em 0.2em;
 	font-size: .8em;
 }
 
