--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,9 +61,9 @@ body {
 }
 
 .container {
-  width:90vw;
+  width:100vw;
   height: 100vh;
-  margin: 0 auto;
+	padding-top: 2em;
   display: grid;
   overflow-x: hidden;
   grid-template-columns: repeat(12, 1fr);
