--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,17 +57,19 @@ body {
   overflow: hidden;
   background-color: #F1F3F3;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
+	letter-spacing: .01em;
   color: rgba(0, 0, 0, 0.8);
 }
 
 .container {
-  width:100vw;
+  width:90vw;
   height: 100vh;
+  margin: 0 auto;
 	padding-top: 2em;
   display: grid;
   overflow-x: hidden;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(9, 1fr);
+  grid-template-rows: 3em repeat(9, 1fr);
   grid-gap: 1em;
 }
 
@@ -82,41 +84,66 @@ body {
 }
 
 .chart-group-1 {
- grid-column: 1/13;
+
  display: flex;
  flex-flow: column;
 }
 
 .charts {
+	grid-column: 1/13;
   display: flex;
-}
-
-.charts > * {
-  flex: 0 0 50%;
-  height: 17em;
+	flex-flow: column;
 }
 
 #us1-chart {
-  grid-column: 1/7;
-  grid-row: 2/6;
+  width: 65%;
+	/* height: 100%; */
 }
 
-#us2-chart {
-  display: none;
-  /* grid-column: 7/13;
-  grid-row: 2/6; */
+.choropleth-container {
+	display: flex;
+	flex-flow: column;
+	height: 23em;
+	width: 50%;
+	margin: 1em 0em;
+	background-color: #fff;
+  border: rgba(0,0,0,.3) 1px solid;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+}
+
+.choropleth-data {
+	display: flex;
+}
+
+.chart-header {
+	display: flex;
+  flex-flow: column;
+  justify-content: center;
+	height: 4em;
+  background-color: #2980b9;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+  margin-bottom: 1em;
+}
+
+.chart-header .title {
+	color: #fff;
+	padding: .5em;
 }
 
 .line-chart-container {
   display: flex;
   flex-flow: column;
+	background-color: #fff;
+  border: rgba(0,0,0,.3) 1px solid;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
 }
 
-#line-chart-1 {
+#line-chart {
+	/* width: 80%; */
   height: 15em;
 }
 
-#line-chart-1-range {
+#range-chart {
   height: 2em;
 }
 
@@ -154,7 +181,6 @@ body {
 .switch-field {
 	grid-column: 7/13;
   display: flex;
-  margin-bottom: 0.5em;
 }
 
 .switch-field input {
@@ -169,13 +195,11 @@ body {
 .switch-field label {
 	display: flex;
 	align-items: center;
-  background-color: #e4e4e4;
-  color: rgba(0, 0, 0, 0.6);
+  color: #fff;
   font-size: 14px;
   text-align: center;
   text-shadow: none;
   padding: 6px 14px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
   transition: all 0.1s ease-in-out;
 }
 
@@ -184,7 +208,7 @@ body {
 }
 
 .switch-field input:checked + label {
-  background-color: #A5DC86;
+	border-bottom: #fff 3px solid;
 }
 
 .caption {
@@ -192,6 +216,7 @@ body {
 	justify-content: center;
 	font-size: .8em;
 	margin-top: 1em;
+	margin-bottom: .5em;
 }
 
 .tooltip {
@@ -204,6 +229,10 @@ body {
 
 .tooltip-data {
   margin-bottom: 1em;
+}
+
+.tooltip-data > * {
+	flex: 1 1 0;
 }
 
 .flex {
@@ -225,20 +254,37 @@ body {
   color: #36454f;
 }
 
+/* TODO: Figure out how to sort out the key*/
+.key {
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-bottom: .3em;
+  color: #36454f;
+}
+
 .tooltip p {
   font-size: .85em;
 }
 
+.render-data p {
+  font-size: .85em;
+}
+
 #clearIssueFilterButton {
-	background-color: #e4e4e4;
-  color: rgba(0, 0, 0, 0.6);
+	visibility: hidden;
+}
+
+.switch-button {
+  color: #fff;
   font-size: 14px;
   text-align: center;
+	background-color: transparent;
+	border-color: transparent;
   text-shadow: none;
   padding: 6px 14px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+	margin-right: .5em;
   transition: all 0.1s ease-in-out;
-	visibility: hidden;
+	border-bottom: #fff 3px solid;
 }
 
 .select-field {
