First pass at special notes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,12 +103,18 @@ body {
 .choropleth-container {
 	display: flex;
 	flex-flow: column;
-	height: 23em;
+	/* height: 25em; */
 	width: 50%;
 	margin: 1em 0em;
 	background-color: #fff;
   border: rgba(0,0,0,.3) 1px solid;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+}
+
+.special-note {
+	font-size: .9em;
+	line-height: 1.2;
+	padding: 0 1em 1em 1em;
 }
 
 .choropleth-data {
