--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,10 +111,10 @@ body {
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
 }
 
-.special-note {
+.data-table-2 {
 	font-size: .9em;
 	line-height: 1.2;
-	padding: 0 1em 1em 1em;
+	padding: 1em;
 }
 
 .choropleth-data {
@@ -308,4 +308,8 @@ body {
 
 #title-select:focus {
 	outline: none;
+}
+
+.hide {
+	display: none;
 }
