--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -307,6 +307,20 @@ body {
 	display: flex;
 }
 
+.select-element {
+	display: flex;
+  align-items: center;
+	margin-right: 1em;
+}
+
+.select-label {
+	background-color: #607D8B;
+  width: 1em;
+  height: 1em;
+  display: block;
+  border-radius: 50%;
+}
+
 .title-select {
 	background-color: transparent;
 	border-radius: 0;
@@ -316,6 +330,15 @@ body {
 	font-size: 1em;
 	margin: 0 .75em;
 	color: rgba(0, 0, 0, .8);
+}
+
+.clear {
+	/* color: rgba(0, 0, 0, .6); */
+	color: #E91E63;
+}
+
+.clear:hover{
+	cursor: pointer;
 }
 
 .title-select:focus {
